--- a/index2.html
+++ b/index2.html
@@ -4,13 +4,14 @@
       <title>Bloc Jams</title>
 </head>
      <body>
-       <div> <!-- navigation bar -->
-               </div>
-               <div> <!-- hero content -->
+       <navigation> <!-- nav bar -->
+       </nav>
+               <section> <!-- hero content -->
                  <h1>Bloc Jams</h1>
                   <h3>Turn the music up!</h3>
-                </div>
-               <div> <!-- selling points -->
+                </section>
+
+               <section> <!-- selling points -->
                </div>
                <div>
               <h5>Choose your music</h5>
@@ -23,6 +24,6 @@
           <div>
               <h5>Mobile enabled</h5>
               <p>Listen to your music on the go. This streaming service is available on all mobile platforms.</p>
-          </div>
+          </section>
      </body>
  </html>
